# example_code

./: .gitignore  CMakeLists.txt  README.md  parse_simulation.py  parse_simulation_file.ipynb
core/: CMakeLists.txt
core/planet/inc/: planet.h
core/planet/src/: planet.c
core/point/inc/: point.h
core/point/src/: point.c
inc/: planet.h  point.h
sample/: README.md  simulation.txt
src/: main.c
